--- a/영어데이터셋포맷.md
+++ b/영어데이터셋포맷.md
@@ -1,16 +1,17 @@
 |Data SET 종류|데이터포맷|링크|
+|------------|---------|----|
 |kaggle|CSV, JSON, SQLite, Achives(Zip), BigQuery||
 |Fever|JSONL(JSON Lines)||
 |Emergent|Google 뉴스레터 데이터 수집 웹크롤링, 요청(뉴스레터신청)하여 데이터받기||
 |credbank|AWS s3 서비스이용(Json,csv/tsv,clf)||
 |liar|Archives zip 파일|https://sites.cs.ucsb.edu/~william/data/|
 |buzzfeed|github에 csv파일|https://github.com/BuzzFeedNews/2016-10-facebook-fact-check/tree/master/data|
-|George Mcintre|웹크롤링 데이터||
+|George Mcintre|지오지 맥인트레 웹크롤링||
 |FakeNewsNET|github에 csv파일|https://github.com/KaiDMML/FakeNewsNet/tree/master/dataset|
 |FNC-1|github에 csv 파일|https://github.com/FakeNewsChallenge/fnc-1|
-|Politifact|웹크롤링 데이터||
+|Politifact|폴리트팩트 웹크롤링||
 |MediaEval Multimedia|csv,Archives(Zip), MetaData(txt)||
-|Twitter|트위터 크롤링||
-|weibo|웨이보 크롤링||
-|Snopes|스놉스 크롤링||
+|Twitter|트위터 웹크롤링||
+|weibo|웨이보 웹크롤링||
+|Snopes|스놉스 웹크롤링||
 |PHEME|csv, json||
