Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -1,6 +1,6 @@
 ## 한글 가짜 뉴스 검출 논문을 검색 후 있다면 사용하는 가짜 뉴스 데이터 셋 조사
 
-|데이터셋 종류|소유하는 필드명|뉴스 분류|
+|데이터셋 종류|소유하는 필드명(MetaData)|뉴스 분류|
 |------------|--------------|--------|
 |Kaggle|title, fact_tag(Label), text, subject, date 등등  다양한 컬럼 선택하여 구성 가능|TRUE/FALSE[2가지]|
 |BuzzeFeed|id, title, fact_tag(Label) text, url, top_img, authors, source, publish_date, movies, images, canonical_link, meta_data|TRUE/FALSE[2가지]|
