--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -7,7 +7,7 @@
 |Liar|id, fact_tag(Label), statement, subject, speaker, speaker's job title, state info, party affiliation, total credit histroy count(진실 제외 5가지 점수), context|Mostly False/False/Half True/Mostly True/Pants On Fire/True[6가지]|
 |EMERGENT|article : fact_tag(Label), Emerget_url, title, gategory, claim, claim_descript, publish_date, body<br/><br/> original : origin_url, text, title, publish_date, author|TRUE/FALSE[2가지]|
 |PolitiFact|article : fact_tag(Label), Politi_url, title, category, claim, claim_descript, publish_date<br/><br/> original : origin_url, oringin_text, author, publish_date|Mostly False/False/Half True/Mostly True/Pants On Fire/True[6가지]|
-|Snope |article : fact_tag(Label), Snope_url, title, category, claim, claim_descript, publish_date<br/><br/> original : origin_url, index_paragraph, text, title, publish_date, author|TRUE/Mostly True/Mixture/Mostly False/False/Unproven/Outdated/Miscaptioned/Correct Attribution/Misattributed/Scam/Legend/Labeled Satire/Lost Legend(14가지)|
+|Snope |article : fact_tag(Label), Snope_url, title, category, claim, claim_descript, publish_date<br/><br/> original : origin_url, index_paragraph, text, title, publish_date, author|True/Mostly True/Mixture/Mostly False/False/Unproven/Outdated/Miscaptioned/Correct Attribution/Misattributed/Scam/Legend/Labeled Satire/Lost Legend(14가지) https://www.snopes.com/fact-check-ratings/|
 
 <table>
        <thead>
