--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -15,9 +15,10 @@
                <th>논문명</th>
                <th>저자명</th>
                <th>날짜</th>
-               <th>사용하는데이터</th>
-               <th>개수</th>
-               <th>비고</th>
+               <th>사용하는 데이터</th>
+               <th>총 수집 데이터 개수</th>
+               <th>상세현황</th>
+               <th>메타데이터</th>
            </tr>
        </thead>
        <tbody>
@@ -25,24 +26,29 @@
                <td rowspan=4>뉴스와 소셜 데이터를 활용한 텍스트 기반 가짜 뉴스 탐지 방법론</td>
                <td rowspan=4>현윤진</td>
                <td rowspan=4>2018년 11월</td>               
-               <td>SNU FactCheck 2017년3월29일~2018년6월22일</td>
+               <td>SNU FactCheck<br/> 2017년3월29일~2018년6월22일</td>
                <td>679건</td>
-               <td>가짜19, 진실9건, https://factcheck.snu.ac.kr/</td>
+               <td>완전 가짜 19건, 완전 진실 9건, https://factcheck.snu.ac.kr/</td>
            </tr>
            <tr>
-               <td>뉴스톱 2017년4월27일~208년6월22일</td>
+               <td>뉴스톱<br/> 2017년4월27일~208년6월22일</td>
                   <td>333건</td>
-                  <td>가짜 36건, 진짜9건,http://www.newstof.com/</td>
+                  <td>완전 가짜 36건, 완전 진실 9건, http://www.newstof.com/</td>
            </tr>
            <tr>
-                  <td>기타뉴스 2017년1월1일~2018년6월22일</td>
+                  <td>부족한 데이터(네이버 뉴스 검색)<br/> 2017년1월1일~2018년6월22일</td>
                   <td>61건</td>
-                  <td>가짜1건 진짜60건</td>
+                  <td>명백히 가짜로 밝혀진 뉴스와 실제로 일어난 사건 진실로 분류, 가짜 1건 진실 60건</td>
               </tr>    
+              <tr>
+                     <td></td>
+                     <td></td>
+                     <td> 뉴스데이터 총 134건 (완전히 가짜 56건, 완전히 진실 78건)</td>
+              </tr>
            <tr>
                   <td>트위터 데이터</td>
                   <td>16384건</td>
-                  <td></td>
+                  <td>총134건의 뉴스데이터의 키워드 추출, 고급검색 기능을 이용하여 키워드 및 날짜(2016년1월1일~2018년7월10일 한정)입력후 관련된 트윗 </td>
               </tr>                           
            <tr>
                <td>토픽모델링과 SVM을 이용한 한국어 가짜뉴스 탐지 시스템</td>
