--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -23,12 +23,13 @@
        </thead>
        <tbody>
            <tr>
-               <td rowspan=4>뉴스와 소셜 데이터를 활용한 텍스트 기반 가짜 뉴스 탐지 방법론</td>
-               <td rowspan=4>현윤진</td>
-               <td rowspan=4>2018년 11월</td>               
+               <td rowspan=5>뉴스와 소셜 데이터를 활용한 텍스트 기반 가짜 뉴스 탐지 방법론</td>
+               <td rowspan=5>현윤진</td>
+               <td rowspan=5>2018년 11월</td>               
                <td>SNU FactCheck<br/> 2017년3월29일~2018년6월22일</td>
                <td>679건</td>
                <td>완전 가짜 19건, 완전 진실 9건, https://factcheck.snu.ac.kr/</td>
+                  <td rowspan=5>news_id, target(Label), title, contents, date<br/>tweet_id, target(Label), user, date, tweets</td>
            </tr>
            <tr>
                <td>뉴스톱<br/> 2017년4월27일~208년6월22일</td>
@@ -39,17 +40,17 @@
                   <td>부족한 데이터(네이버 뉴스 검색)<br/> 2017년1월1일~2018년6월22일</td>
                   <td>61건</td>
                   <td>명백히 가짜로 밝혀진 뉴스와 실제로 일어난 사건 진실로 분류, 가짜 1건 진실 60건</td>
-              </tr>    
-              <tr>
-                     <td></td>
-                     <td></td>
-                     <td> 뉴스데이터 총 134건 (완전히 가짜 56건, 완전히 진실 78건)</td>
-              </tr>
+           </tr>    
+           <tr>
+                   <td></td>
+                   <td></td>
+                   <td> 뉴스데이터 총 134건 (완전히 가짜 56건, 완전히 진실 78건)</td>
+           </tr>
            <tr>
                   <td>트위터 데이터</td>
                   <td>16384건</td>
                   <td>총134건의 뉴스데이터의 키워드 추출, 고급검색 기능을 이용하여 키워드 및 날짜(2016년1월1일~2018년7월10일 한정)입력후 관련된 트윗 </td>
-              </tr>                           
+           </tr>                           
            <tr>
                <td>토픽모델링과 SVM을 이용한 한국어 가짜뉴스 탐지 시스템</td>
                <td>윤태욱</td>
