Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -55,9 +55,10 @@
                <td>토픽모델링과 SVM을 이용한 한국어 가짜뉴스 탐지 시스템</td>
                <td>윤태욱</td>
                   <td>2019년</td>
-                  <td>SNU FactCheck</td>
+                  <td>SNU FactCheck<br/> 2017년3월29일~2017년9월18일</td>
                   <td>200건</td>
-                  <td>https://factcheck.snu.ac.kr/</td>
+                  <td>6단계로 판정된 200건의 짧은텍스트(사실:19건, 대체로사실:31건, 판단유보:14건, 사실반 거짓반:41, 대체로 거짓:45, 거짓:50)<br/> https://factcheck.snu.ac.kr/</td>
+                  <td>ID, fact_tag(Label), contents , 주제, 언론사, 관련인, 관련인 직업, 소속정당, TCHC(Total Credit History Count)[어떠한 판정을 받았는가 : 실제,중립,가짜], 날짜</td>
            </tr>
            <tr>
                 <td>인용리트윗 기반 가짜뉴스 탐지 모델</td>
