Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -61,13 +61,20 @@
                   <td>ID, fact_tag(Label), contents , 주제, 언론사, 관련인, 관련인 직업, 소속정당, TCHC(Total Credit History Count)[어떠한 판정을 받았는가 : 실제,중립,가짜], 날짜</td>
            </tr>
            <tr>
-                <td>인용리트윗 기반 가짜뉴스 탐지 모델</td>
-               <td>장용훈</td>
-                  <td>2020년</td>
-                  <td>외국 트윗,리트윗,인용리트윗</td>
-                  <td></td>
+                <td rowspan=2>인용리트윗 기반 가짜뉴스 탐지 모델</td>
+               <td rowspan=2>장용훈</td>
+                  <td rowspan=2>2020년</td>
+                  <td rowspan=2>외국 트윗,리트윗,인용리트윗<br/>2015년1월~2019년4월 외국뉴스 </td>
+                  <td>가짜 뉴스 : 1,149건, 진짜 뉴스 : 2,278건</td>
+                  
+                  <td>가짜 뉴스 트윗 : 16,453건
+                  <td>트위피 활용 사용자 정보 : 65,405건 </td>
                   <td>트위피와 셀레니움 도구를 활용 데이터 수집</td>
            </tr>
+              <tr>
+                     <td>진짜 뉴스 트윗 : 56,651건</td>
+              </tr>
+              
            <tr>
                 <td>콘텐츠 기반 변수 추출방법에 의거한 가짜뉴스분류</td>
                <td>정호선</td>
