Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -67,7 +67,7 @@
                   <td rowspan=3>외국 트윗,리트윗,인용리트윗<br/>2015년1월~2019년4월 외국뉴스 </td>
                   <td>가짜 뉴스 : 1,149건</br>, 가짜뉴스 트윗 : 16,453건</td>                             
                   <td rowspan=3>웹스크래핑 도구 : 셀레니움 웹상의 데이터크롤링, 트위피 : 트위터의 작성한 사용자 정보 수집,</br>뉴스에 대한 트윗 텍스트로부터 반응정보 추출 AI 소싱 플랫폼 : appen</td>
-                  <td rowspan=3></td>
+                  <td rowspan=3>title, news_id,tweet_id,user,date,text,rt_cnt,rep_cnt,fav_cnt 등등</td>
            </tr>
               <tr>
                    <td>진짜 뉴스 : 2,278건, 진짜 뉴스 트윗 : 56,651건</td>
@@ -80,16 +80,18 @@
                <td>정호선</td>
                   <td>2019년</td>
                   <td>SNUFC의 진위여부 판정 이슈 기반 한국 트위터 가짜뉴스 데이터셋</td>
-                  <td></td>
-                  <td></td>
+                  <td>200개의 트위터 가짜뉴스 데이터</td>
+                  <td>- 팩트체크 사이트에서 진위 여부 판정된 이슈 기반으로 한국어 트위터 가짜뉴스 데이터 수집<br/>- 수집할때, 사실 혹은 대체로 사실은 사실로 분류, 전혀 사실 아님 혹은 대체로 사실 아님은 거짓으로 분류, 절반의 사실이나 판단유보 판정된 이슈는 데이터 수집대상 제외<br/>-진실, 거짓 개수 나와있지 않음</td>
+                  <td>메타데이터 형식 알수 없음.</td>
            </tr>
               <tr>
                 <td>딥러닝 기법을 이용한 가짜뉴스 탐지</td>
                <td>이동호</td>
                   <td>2018년5월</td>
                   <td>중앙일보, 동아일보,조선일보,한겨례, 매일경제 크롤링</td>
-                  <td>10만개</td>
-                  <td>제목과본문일치 31000개,불일치 68000</td>
+                  <td>10만개(제목과본문일치 31000개,불일치 68000개)</td>
+                  <td>- 언론사별 경제,사회 정치, 연예, 스포츠 카테고리를 나누어 동일 비율로 기사 수집<br/>- 정확히 어떠한 형식으로, 진실 vs 가짜 분류 되어있지 않음.</td>
+                  <td>메타데이터 알수 없음</td>                   
            </tr>
                <tr>
                 <td>워드 임베딩을 활용한 한국어 가짜뉴스 탐지모델에 관한 연구</td>
