Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -91,7 +91,7 @@
                   <td>중앙일보, 동아일보,조선일보,한겨례, 매일경제 크롤링</td>
                   <td>10만개(제목과본문일치 31000개,불일치 68000개)</td>
                   <td>- 언론사별 경제,사회 정치, 연예, 스포츠 카테고리를 나누어 동일 비율로 기사 수집<br/>- 정확히 어떠한 형식으로, 진실 vs 가짜 분류 되어있지 않음.</td>
-                  <td>메타데이터 알수 없음</td>                   
+                  <td>메타데이터 형식 알수 없음.</td>                   
            </tr>
                <tr>
                 <td>워드 임베딩을 활용한 한국어 가짜뉴스 탐지모델에 관한 연구</td>
@@ -99,7 +99,8 @@
                   <td>2020년7월</td>
                   <td>SNU FactCheck,네이버뉴스</td>
                   <td>2118개</td>
-                  <td>가짜1059개,진짜 307개,네이버 752개</td>
+                  <td>SNU-Fact : 가짜 1059개,진짜 307개 수집<br/>2016년부터 2020년 108,730개중 무작위로 네이버 752개 수집</td>
+                  <td>메타데이터 형식 알수 없음.</td>   
            </tr>
               <tr>
                 <td>문서요약 기법이 가짜뉴스 탐지모형에 미치는 영향에 관한연구</td>
