Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -107,8 +107,9 @@
                <td>심재승</td>
                   <td>2019년9월</td>
                   <td>SNU FactCheck,네이버뉴스</td>
-                  <td></td>
+                  <td>총:100개<br/>SNU Factcheck 가짜뉴스 50개/Naver News 크롤링 진짜뉴스 50개</td>
                   <td>문서형태소 분석 기술사용(딥러닝X)</td>
+       <td>Date, Title, Full-text, Source, Evidence, Col.date(date of collection), Result</td>
            </tr>
               <tr>
                 <td>가짜뉴스에 대한 포털과 SNS간 반응 차이 감성분석</td>
