Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -99,7 +99,7 @@
                   <td>2020년7월</td>
                   <td>SNU FactCheck,네이버뉴스</td>
                   <td>2118개</td>
-                  <td>SNU-Fact : 가짜 1059개,진짜 307개 수집<br/>2016년부터 2020년 108,730개중 무작위로 네이버 752개 수집</td>
+                  <td>SNU-Fact : 가짜 1059개, 진짜 307개 수집<br/>2016년부터 2020년 108,730개중 무작위로 네이버 752개 수집(진짜/가짜 개수 알수 없음)</td>
                   <td>메타데이터 형식 알수 없음.</td>   
            </tr>
               <tr>
@@ -107,8 +107,8 @@
                <td>심재승</td>
                   <td>2019년9월</td>
                   <td>SNU FactCheck,네이버뉴스</td>
-                  <td>총:100개<br/>SNU Factcheck 가짜뉴스 50개/Naver News 크롤링 진짜뉴스 50개</td>
-                  <td>문서형태소 분석 기술사용(딥러닝X)</td>
+                  <td>100개</td>
+                  <td>가짜뉴스 : SNU Factcheck 50개, 진짜뉴스 : Naver News 크롤링 50개</td>
        <td>Date, Title, Full-text, Source, Evidence, Col.date(date of collection), Result</td>
            </tr>
               <tr>
