Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -116,8 +116,9 @@
                <td>김동진</td>
                   <td>2017년</td>
                   <td>네이버뉴스수집</td>
-                  <td></td>
-                  <td>R project의 N2H4 패키지 사용,감성분석(딥러닝X)</td>
+                  <td>가짜뉴스 :2556건<br/>달린댓글 : 2만9,969건</td>
+                  <td>R project의 N2H4 패키지 사용, 가짜뉴스와 달린 갯글의 관계로 감성분석 작업(딥러닝X)</td>
+       <td>메타데이터 형식 알수 없음.</td>
            </tr>
               <tr>
                 <td>머신러닝을 활용한 가짜리뷰 탐지연구 : 사용자 행동 분석을 중심으로</td>
