--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -127,6 +127,7 @@
                   <td>네이버 포스트 수집</td>
                   <td>14419개</td>
                   <td>1차 : 115개의 단어로 관련된 11,459개의 포스트 수집<br/>2차 : 30개의 단어로 관련된 2,960개<br/>네이버 OPEN API 및 웹크롤러 사용</td>
+       <td>메타데이터 형식 알수 없음.</td>
            </tr>
               <tr>
                      <td>..</td>
