--- a/크롤링 방법.md
+++ b/크롤링 방법.md
@@ -38,33 +38,28 @@
     - SNU : 2017년3월29일~2017년9월18일(6개월), 6단계로 판정된 200건의 짧은 텍스 및 메타데이터
 * 크롤링방법
   - 뉴스데이터
-      1.수집 데이터 정의 
-         - 정치·경제적 이익을 위 해 의도적으로 언론 보도의 형식을 하고 유포된 거짓 정보
-           1. 가짜뉴스의 주된 목표는 정치·경제적 이익이다. 정치적으로 상대적 이득을 얻기 위해 허위 사실을 생성·유포하여 다른 정당과 후보자를 폄하하거나 경제적으로 타인에게 손실을
- 주어 자신 및 이해관계자들이 이득을 얻는 것을 목적   
-           2. 거짓 정보를 담고 있다. 거짓 정보는 정보 제공의 의도와 관계없이 사실과 다르게 다소 정확하지 않거나 아예 맞지 않는 정보들을 지칭하는 잘못된 정보와 정밀하게 만들어 특정한 의도로 유
-  도하는 정보들을 지칭하는 기만적 정보를 둘 다 포함   
-           3. 가짜뉴스는 언론 보도의 형식을 취한다. 형식적인 면에서 온라인 커뮤니티의 글과 같이 체계적이지 않아 자유로운 형식과 다르게 어느 정도 기사로 오인할 수 있을 만한 전문적인 언론 보도 형식을
-  갖추어야 한다
- 
-2. 크롤링 규칙
+    1. 수집 데이터 정의 : 정치·경제적 이익을 위 해 의도적으로 언론 보도의 형식을 하고 유포된 거짓 정보
+      1. 가짜뉴스의 주된 목표는 정치·경제적 이익이다. 정치적으로 상대적 이득을 얻기 위해 허위 사실을 생성·유포하여 다른 정당과 후보자를 폄하하거나 경제적으로 타인에게 손실을 주어 자신 및 이해관계자들이 이득을 얻는 것을 목적   
+      2. 거짓 정보를 담고 있다. 거짓 정보는 정보 제공의 의도와 관계없이 사실과 다르게 다소 정확하지 않거나 아예 맞지 않는 정보들을 지칭하는 잘못된 정보와 정밀하게 만들어 특정한 의도로 유도하는 정보들을 지칭하는 기만적 정보를 둘 다 포함   
+      3. 가짜뉴스는 언론 보도의 형식을 취한다. 형식적인 면에서 온라인 커뮤니티의 글과 같이 체계적이지 않아 자유로운 형식과 다르게 어느 정도 기사로 오인할 수 있을 만한 전문적인 언론 보도 형식을 갖추어야 한다
+    2. 크롤링 규칙
  - 기간을 정하고 모든 뉴스데이터 크롤링하여 실제 , 중립 ,가짜의 3가지의 클래스로 정의
 
-* 데이터 활용
-1단계 : 데이터 수집과 전처리 
- - 사실과 대체로사실은 실제로 판단유보와 사실반거짓반은 중립, 대체로거짓과 거짓은 가짜로 변경
- - 실제 , 중립 ,가짜의 3가지의 클래스 치환하고 독립변수에 해당하는 메타 데이터를 연속형 변수 및 이산형 변수로 치환
-  => Liar 메타데이터 (Subjects, Contexts/Venues, TCHC(Total Credit History Count), Home State, Current Job, Party Affiliation
-2단계 : 텍스트 마이닝
- - SNUFN 데이터셋 중에 짧은 텍스트 토픽모델링 수행 
- - 모델링 결과로 짧은 텍스트 정량화된 텍스트의 특징값들로 치환
- - 문서-토픽 가중치 행렬에서 산출되는 수치를 활용(TF-IDF 사용)
-3단계 : 모델 구축
- - 짧은 텍스트 토픽모델링 이후 정량화된 텍스트의 특징값들로 치환 작업 완료
- - SNUFN 데이터셋 학습용 vs 검증용 분류
- - 학습된 모델 구축을 위한 학습용 데이터셋에 기계학습을 활용
-4단계 : 모델 적용과 검증
- - 실제, 중립, 가짜 중 하나로 산출되는 예측 판정이 검증용 데이터셋의 실제 판정과 일치하는 지 점검하여 예측정확도 측정
+* 데이터 활용   
+   1단계 : 데이터 수집과 전처리 
+     - 사실과 대체로사실은 실제로 판단유보와 사실반거짓반은 중립, 대체로거짓과 거짓은 가짜로 변경   
+     - 실제 , 중립 ,가짜의 3가지의 클래스 치환하고 독립변수에 해당하는 메타 데이터를 연속형 변수 및 이산형 변수로 치환   
+     => Liar 메타데이터 (Subjects, Contexts/Venues, TCHC(Total Credit History Count), Home State, Current Job, Party Affiliation   
+   2단계 : 텍스트 마이닝   
+     - SNUFN 데이터셋 중에 짧은 텍스트 토픽모델링 수행 
+     - 모델링 결과로 짧은 텍스트 정량화된 텍스트의 특징값들로 치환
+     - 문서-토픽 가중치 행렬에서 산출되는 수치를 활용(TF-IDF 사용)   
+   3단계 : 모델 구축
+     - 짧은 텍스트 토픽모델링 이후 정량화된 텍스트의 특징값들로 치환 작업 완료
+     - SNUFN 데이터셋 학습용 vs 검증용 분류
+     - 학습된 모델 구축을 위한 학습용 데이터셋에 기계학습을 활용   
+   4단계 : 모델 적용과 검증
+     - 실제, 중립, 가짜 중 하나로 산출되는 예측 판정이 검증용 데이터셋의 실제 판정과 일치하는 지 점검하여 예측정확도 측정   
 
 메타데이터 
  - 이산형 변수 : 주제, 언론사, 관련인, 관련인 직업, 소속정당 
