--- a/크롤링 방법.md
+++ b/크롤링 방법.md
@@ -1,5 +1,30 @@
 ## SNU FACTCHECK 데이터 중 가짜뉴스 검출 시스템에서 활용할 수 있는 데이터 크롤릴 방법 도출
 
+**크롤링방법 1**
+ * 뉴스데이터
+   * 수집 데이터 정의   
+     - 가짜 : 가짜뉴스를 의도와 상관없이 허위 사실을 포함하고 있거나, 허위 사실을 말하고 있는 정치인 혹은 공직자의 발언, 찌라시, 루머 등을 포함하는 뉴스데이터   
+     - 진짜 : 실제로 일어난 사건에 대한 뉴스데이터
+   * 크롤링 규칙   
+     - 공신력 있는 SNU FactCheck와 뉴스톱 사이트의 크롤링 날짜를 동기화   
+     - 대체로 거짓, 거짓, 대체로 진실, 진실 (4종류로 분류) 중 완전히 가짜, 완전히 진실 뉴스데이터만 크롤링
+   * 크롤링 고려사항    
+     - 두개의 사이트에서 완전히 가짜/진실라고 판명이 되었지만, 원문 혹은 관련내용 존재 하지 않을 경우 네이버 뉴스 키워드 검색실시 하여 가장 유사하고 대표적인 뉴스데이터 수집
+ * 트위터
+   * 크롤링 규칙   
+     - 수집된 뉴스데이터의 키워드를 추출   
+     - 트위터의 고급 검색기능 활용하여 뉴스데이터 키워드 입력   
+     - 관련 트윗 크롤링
+
+**크롤링방법 2**
+ * 뉴스데이터
+   * 수집 데이터 정의 : 정치·경제적 이익을 위 해 의도적으로 언론 보도의 형식을 하고 유포된 거짓 정보
+      1. 가짜뉴스의 주된 목표는 정치·경제적 이익이다. 정치적으로 상대적 이득을 얻기 위해 허위 사실을 생성·유포하여 다른 정당과 후보자를 폄하하거나 경제적으로 타인에게 손실을 주어 자신 및 이해관계자들이 이득을 얻는 것을 목적   
+      2. 거짓 정보를 담고 있다. 거짓 정보는 정보 제공의 의도와 관계없이 사실과 다르게 다소 정확하지 않거나 아예 맞지 않는 정보들을 지칭하는 잘못된 정보와 정밀하게 만들어 특정한 의도로 유도하는 정보들을 지칭하는 기만적 정보를 둘 다 포함   
+      3. 가짜뉴스는 언론 보도의 형식을 취한다. 형식적인 면에서 온라인 커뮤니티의 글과 같이 체계적이지 않아 자유로운 형식과 다르게 어느 정도 기사로 오인할 수 있을 만한 전문적인 언론 보도 형식을 갖추어야 한다
+   * 크롤링 규칙
+      1. 기간을 정하고 모든 뉴스데이터 크롤링하여 실제 , 중립 ,가짜의 3가지의 클래스로 정의
+      
 **<논문 1>**
  * 정리
    - SNU    : 2017년3월29일~2018년6월22일 총 679건중 완전히 가짜 19건, 완전히 진실 9건 수집
@@ -16,35 +41,11 @@
    - 결과 
      - 뉴스데이터 분류 : 134건중 학습데이터 77건(진실45,거짓32건), 검증데이터 57건(진실 33건,거짓24건)
      - 트윗데이터 분류 : 16,384건중 학습데이터 10,371건(진실 5,623건, 거짓4,748건) 검증데이터 6,013건(진실 3,028건, 거짓 2,985건)
-* 크롤링방법
-  - 뉴스데이터
-      1. 수집 데이터 정의   
-        - 가짜 : 가짜뉴스를 의도와 상관없이 허위 사실을 포함하고 있거나, 허위 사실을 말하고 있는 정치인 혹은 공직자의 발언, 찌라시, 루머 등을 포함하는 뉴스데이터   
-        - 진짜 : 실제로 일어난 사건에 대한 뉴스데이터
-      2. 크롤링 규칙   
-        - 공신력 있는 SNU FactCheck와 뉴스톱 사이트의 크롤링 날짜를 동기화   
-        - 대체로 거짓, 거짓, 대체로 진실, 진실 (4종류로 분류) 중 완전히 가짜, 완전히 진실 뉴스데이터만 크롤링
-      3. 크롤링 고려사항    
-        - 두개의 사이트에서 완전히 가짜/진실라고 판명이 되었지만, 원문 혹은 관련내용 존재 하지 않을 경우 네이버 뉴스 키워드 검색실시 하여 가장 유사하고 대표적인 뉴스데이터 수집
-  - 트위터
-      1. 크롤링 규칙   
-        - 수집된 뉴스데이터의 키워드를 추출   
-        - 트위터의 고급 검색기능 활용하여 뉴스데이터 키워드 입력   
-        - 관련 트윗 크롤링
 
 **<논문 2>** 
 
   * 정리   
     - SNU : 2017년3월29일~2017년9월18일(6개월), 6단계로 판정된 200건의 짧은 텍스 및 메타데이터
-* 크롤링방법
-  - 뉴스데이터
-    1. 수집 데이터 정의 : 정치·경제적 이익을 위 해 의도적으로 언론 보도의 형식을 하고 유포된 거짓 정보
-      1. 가짜뉴스의 주된 목표는 정치·경제적 이익이다. 정치적으로 상대적 이득을 얻기 위해 허위 사실을 생성·유포하여 다른 정당과 후보자를 폄하하거나 경제적으로 타인에게 손실을 주어 자신 및 이해관계자들이 이득을 얻는 것을 목적   
-      2. 거짓 정보를 담고 있다. 거짓 정보는 정보 제공의 의도와 관계없이 사실과 다르게 다소 정확하지 않거나 아예 맞지 않는 정보들을 지칭하는 잘못된 정보와 정밀하게 만들어 특정한 의도로 유도하는 정보들을 지칭하는 기만적 정보를 둘 다 포함   
-      3. 가짜뉴스는 언론 보도의 형식을 취한다. 형식적인 면에서 온라인 커뮤니티의 글과 같이 체계적이지 않아 자유로운 형식과 다르게 어느 정도 기사로 오인할 수 있을 만한 전문적인 언론 보도 형식을 갖추어야 한다
-    2. 크롤링 규칙
- - 기간을 정하고 모든 뉴스데이터 크롤링하여 실제 , 중립 ,가짜의 3가지의 클래스로 정의
-
 * 데이터 활용   
    1단계 : 데이터 수집과 전처리 
      - 사실과 대체로사실은 실제로 판단유보와 사실반거짓반은 중립, 대체로거짓과 거짓은 가짜로 변경   
