--- a/크롤링 방법.md
+++ b/크롤링 방법.md
@@ -1,6 +1,6 @@
 ## SNU FACTCHECK 데이터 중 가짜뉴스 검출 시스템에서 활용할 수 있는 데이터 크롤릴 방법 도출
 
-**크롤링방법 1**
+**<크롤링방법 1>**
  * 뉴스데이터
    * 수집 데이터 정의   
      - 가짜 : 가짜뉴스를 의도와 상관없이 허위 사실을 포함하고 있거나, 허위 사실을 말하고 있는 정치인 혹은 공직자의 발언, 찌라시, 루머 등을 포함하는 뉴스데이터   
@@ -16,7 +16,7 @@
      - 트위터의 고급 검색기능 활용하여 뉴스데이터 키워드 입력   
      - 관련 트윗 크롤링
 
-**크롤링방법 2**
+**<크롤링방법 2>**
  * 뉴스데이터
    * 수집 데이터 정의 : 정치·경제적 이익을 위 해 의도적으로 언론 보도의 형식을 하고 유포된 거짓 정보
       1. 가짜뉴스의 주된 목표는 정치·경제적 이익이다. 정치적으로 상대적 이득을 얻기 위해 허위 사실을 생성·유포하여 다른 정당과 후보자를 폄하하거나 경제적으로 타인에게 손실을 주어 자신 및 이해관계자들이 이득을 얻는 것을 목적   
@@ -68,5 +68,43 @@
   - 토픽 모델링 : 꼬꼬마형태소 분석기(서울대학교)
   - 모델 구축 : SVM, ANN, CBR, MDA 사용
 
+**<논문 4>** 
 
+  * 정리   
+    - 팩트체크 사이트에서 진위 여부가 확정된 이슈를 모아 이슈키워드 기반으로 트위터 데이터셋 수집
+    - 수집할때, 사실 혹은 대체로 사실은 사실로 분류, 전혀 사실 아님 혹은 대체로 사실 아님은 거짓으로 분류, 절반의 사실이나 판단유보 판정된 이슈는 데이터수집대상 제외
+    - 200여개의 한국어 트위터 가짜뉴스 데이터 수집 (진실, 거짓 개수 나와있지 않음)
+    
+**<논문 5>** 
 
+  * 정리   
+    - 언론사별 경제,사회 정치, 연예, 스포츠 카테고리를 나누어 동일 비율로 기사 수집
+    - 정확히 어떠한 형식으로, 진실 vs 가짜 분류 되어있지 않음.
+    - 메타데이터 형식 알수 없음.
+    
+**<논문 6>** 
+
+  * 정리   
+    - 가짜뉴스 1059개와 진짜 뉴스 307개는 SNU-Factcheck에서 수집
+    - 부족한 진짜 뉴스는 네이버 뉴스란에서 2016년부터 2020년까지 올라온 부문별 뉴스 108730개 가운데 무작위로 752개를 수집하여 실험 데이터셋을 구성
+
+**<논문 7>** 
+
+  * 정리   
+    - SNU Factcheck 가짜뉴스 50개 Naver News 크롤링 진짜뉴스 50개 총 100개 데이터셋 이용.
+    - 메타데이터 : Date, Title, Full-text, Source, Evidence, Col.date(date of collection), Result 구성
+
+**<논문 8>** 
+
+  * 정리   
+    - 2017년 19대 대선 때 제기된 가짜뉴스들과 관련한 주요이슈 '가짜뉴스'단어를 제목에 포함하고 있는 기사
+    - 네이버 뉴스 정치카테고리 2016년3월 2017년 5월까지 '가짜뉴스'라는 단어를 제목하는 기사 수집
+    - 가짜 뉴스 : 2556건 달린댓글 : 2만9,969건
+    - 결론 : 가짜뉴스와 달린 댓글의 관계로 감성분석하는 작업
+    
+**<논문 9>** 
+
+  * 정리   
+    - 네이버 제공 블로그 검색 Open API 500개의 포스트 수집
+      - 1차 : 115개의 단어로 관련된 11,459개의 포스트 수집
+      - 2차 : 30개의 단어로 관련된 2,960개    
