--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -42,9 +42,9 @@
                   <td>명백히 가짜로 밝혀진 뉴스와 실제로 일어난 사건 진실로 분류, 가짜 1건 진실 60건</td>
            </tr>    
            <tr>
+                   <td colspan=3>뉴스데이터 총 134건 (완전히 가짜 56건, 완전히 진실 78건)</td>
                    <td></td>
                    <td></td>
-                   <td> 뉴스데이터 총 134건 (완전히 가짜 56건, 완전히 진실 78건)</td>
            </tr>
            <tr>
                   <td>트위터 데이터</td>
