Update 한글 가짜뉴스 탐지 논문.md

--- a/한글 가짜뉴스 탐지 논문.md
+++ b/한글 가짜뉴스 탐지 논문.md
@@ -1,4 +1,4 @@
-## 한글 가짜 뉴스 검출 논문을 검색 후 있다면 사용하는 가짜 뉴스 데이터 셋 조사
+## 가짜 뉴스 데이터 셋의 필드 정보 정리
 
 |데이터셋 종류|소유하는 필드명(MetaData)|뉴스 분류|
 |------------|--------------|--------|
@@ -9,6 +9,7 @@
 |PolitiFact|article : fact_tag(Label), Politi_url, title, category, claim, claim_descript, publish_date<br/><br/> original : origin_url, oringin_text, author, publish_date|Mostly False/False/Half True/Mostly True/Pants On Fire/True[ 6가지]|
 |Snope |article : fact_tag(Label), Snope_url, title, category, claim, claim_descript, publish_date<br/><br/> original : origin_url, index_paragraph, text, title, publish_date, author|True/Mostly True/Mixture/Mostly False/False/Unproven/Outdated/Miscaptioned/Correct Attribution/Misattributed/Scam/Legend/Labeled Satire/Lost Legend [14가지] https://www.snopes.com/fact-check-ratings/|
 
+## 가짜 뉴스 검출 한글 논문에서 사용하는 한글 뉴스에 대한 데이터 셋 정리 (필드 정보)
 <table>
        <thead>
            <tr>
