--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -1,5 +1,32 @@
 ## 한글/영문 가짜뉴스 데이터셋의 메타데이터 정리
 
+
+
+
 ## 미디어별 가짜뉴스 메타데이터 정리
+|메타데이터|활자매체(신문/잡지/서적/포스터)|영상매체(TV/영화/컴퓨터)|음성매체(라디오/음반)|뉴미디어(인터넷/SNS/스마트폰)|
+|:----:|:----:|:--------:|:--------:|:--------:|
+|사실유무 라벨|O|O|O|O|
+|제목|O|O|O|O|
+|본문|O|O|O|O|
+|뉴스종류|O|O|O|O|
+|기사주장| |||
+|기사원본주소| |||
+|기사주장 인용| |||
+|사이트상 기사 제목||||
+|사이트상 기사 본문| |||
+|사이트상 기사 날짜| |||
+|사이트상 기사 저자| |||
+|뉴스 출처 및 요약| |||
+|뉴스 대표 사진| |||
+|기자| |||
+|공식홈페이지| |||
+|연설가| |||
+|연설가 직업| |||
+|연설가 당소속| |||
+|뉴스 진실여부 5가지 점수| |||
+|뉴스 지역| |||
 
 ## 한글 가짜뉴스 데이터에 대한 메타데이터 제안 (정의)
+
+
