Update [10월7일 메타데이터 정리].md

--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -1,6 +1,6 @@
 ## 한글/영문 가짜뉴스 데이터셋의 메타데이터 정리
 
-
+![사진1](https://github.com/MDPJW/FakeNews/blob/master/image/image3.png)   
 
 
 ## 미디어별 가짜뉴스 메타데이터 정리
@@ -10,22 +10,22 @@
 |제목|O|O|O|O|
 |본문|O|O|O|O|
 |뉴스종류|O|O|O|O|
-|기사주장| |||
-|기사원본주소| |||
-|기사주장 인용| |||
-|사이트상 기사 제목||||
-|사이트상 기사 본문| |||
-|사이트상 기사 날짜| |||
-|사이트상 기사 저자| |||
-|뉴스 출처 및 요약| |||
-|뉴스 대표 사진| |||
-|기자| |||
-|공식홈페이지| |||
-|연설가| |||
-|연설가 직업| |||
-|연설가 당소속| |||
-|뉴스 진실여부 5가지 점수| |||
-|뉴스 지역| |||
+|기사주장|O|||
+|기사원본주소|O|||
+|기사주장 인용|O|||
+|사이트상 기사 제목|O|||
+|사이트상 기사 본문|O|||
+|사이트상 기사 날짜|O |||
+|사이트상 기사 저자|O |||
+|뉴스 출처 및 요약|O |||
+|뉴스 대표 사진|O |||
+|기자|O|||
+|공식홈페이지|O|||
+|연설가|O|||
+|연설가 직업|O|||
+|연설가 당소속|O|||
+|뉴스 진실여부 5가지 점수|O|||
+|뉴스 지역|O|||
 
 ## 한글 가짜뉴스 데이터에 대한 메타데이터 제안 (정의)
 
