Update [10월7일 메타데이터 정리].md

--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -1,5 +1,259 @@
 ## 한글/영문 가짜뉴스 데이터셋의 메타데이터 정리
+<table>
+       <thead>
+           <tr>
+               <th>언어종류</th>
+               <th colspan=6>영어</th>         
+               <th>한글</th>               
+           </tr>
+       </thead>
+       <tbody>
+           <tr>
+               <td>데이터 종류</td>
+               <td>Kaggle</td>
+             <td>BuzzFeed</td>
+             <td>Liar</td>
+             <td>Emergent</td>
+             <td>PolitiFact</td>
+             <td>Snope</td>    
+             <td>SNU FactCheck</td>
+          </tr>
+         <tr>
+               <td>사실유무 라벨(label)</td>
+               <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td>O</td>
+          </tr>
+         <tr>
+               <td>번호(Id)</td>
+                 <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>    
+             <td></td>  
+             <td>O</td>           
+          </tr>
+         <tr>
+               <td>제목(Title)</td>
+                <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td>O</td>
+          </tr>
+         <tr>
+               <td>본문(Text)</td>
+                 <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td>O</td>
+          </tr>
+         <tr>
+           <td>기사 날짜(Date)</td>
+           <td>O</td>
+           <td>O</td>
+           <td></td>
+           <td>O</td>
+           <td>O</td>  
+           <td>O</td>
+           <td>O</td>
+          </tr>
+         <tr>
+           <td>뉴스 종류(Category)</td>
+           <td>O</td>
+           <td>O</td>
+           <td></td>
+           <td>O</td>
+           <td>O</td>  
+           <td>O</td>
+           <td></td>
+          </tr>
+         <tr>
+           <td>기사 주장(Description)</td>
+           <td>O</td>
+           <td>O</td>
+           <td>O</td>
+           <td>O</td>
+           <td>O</td>  
+           <td>O</td>
+           <td></td>
+          </tr>
+          </tr>
+         <tr>
+             <td>기사원본 주소(Url)</td>
+           <td>O</td>
+           <td>O</td>
+           <td></td>
+           <td>O</td>
+           <td>O</td>  
+           <td>O</td>
+           <td></td>        
+          </tr>
+         <tr>
+          <td>기사주장 인용</td>
+           <td>O</td>
+           <td></td>
+           <td></td>
+           <td>O</td>
+           <td>O</td>  
+           <td>O</td>
+           <td></td>        
+          </tr>
+          <tr>
+             <td>사이트상 기사 제목(Site_Title)</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>
+         <tr>
+             <td>사이트상 기사 본문(Site_Text)</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>
+         <tr>
+             <td>사이트상 기사 날짜(Site_Date)</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>
+         <tr>
+             <td>사이트상 기사 저자(Site_Authors)</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>
+         <tr>
+             <td>사이트상 주소(Site_Url)</td>
+             <td>O</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>
+         <tr>
+             <td>뉴스 출처 및 요약(Tags)</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>    
+             <td></td>
+          </tr>
+           <tr>
+             <td>뉴스 대표 사진(Img)</td>
+             <td>O</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td></td>
+          </tr>         
+           <tr>
+             <td>기자(Authors)</td>
+             <td>O</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td>O</td>
+             <td>O</td>    
+             <td></td>
+          </tr>         
+           <tr>
+             <td>공식홈페이지(Source)</td>
+             <td>O</td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td>O</td>
+          </tr>         
+           <tr>
+             <td>연설자(Speaker)</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td>O</td>
+          </tr>
+          <tr>
+             <td>연설자 직업(Speaker_Job)</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td>O</td>
+          </tr>
+            <tr>
+             <td>연설자 당소속(Pary Affilation)</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td>O</td>
+          </tr>   
+          <tr>
+             <td>가짜뉴스 5가지 점수</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td>O</td>
+          </tr>    
+          <tr>
+             <td>뉴스지역(State InfO)</td>
+             <td>O</td>
+             <td></td>
+             <td>O</td>
+             <td></td>
+             <td></td>
+             <td></td>    
+             <td></td>
+          </tr>   
+         </tbody>
+  </table>
 
+ * 요약그림
+ 
 ![사진1](https://github.com/MDPJW/FakeNews/blob/master/image/image3.png)   
 
 
