Update [10월7일 메타데이터 정리].md

--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -103,7 +103,7 @@
            <td></td>        
           </tr>
          <tr>
-          <td>기사주장 인용</td>
+          <td>기사주장 인용(Description_Citiation)</td>
            <td>O</td>
            <td></td>
            <td></td>
