Update [10월7일 메타데이터 정리].md

--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -260,7 +260,7 @@
 ![사진1](https://github.com/MDPJW/FakeNews/blob/master/image/image3.png)   
 
 
-## 미디어별 가짜뉴스 메타데이터 정리
+## 미디어별 가짜뉴스 메타데이터 정리 - 교수님과 상의후 어떻게 진행할 것인지 
 |메타데이터|활자매체(신문/잡지/서적/포스터)|영상매체(TV/영화/컴퓨터)|음성매체(라디오/음반)|뉴미디어(인터넷/SNS/스마트폰)|
 |:----:|:----:|:--------:|:--------:|:--------:|
 |사실유무 라벨|O|O|O|O|
