--- a/[10월7일 메타데이터 정리].md
+++ b/[10월7일 메타데이터 정리].md
@@ -286,4 +286,7 @@
 
 ## 한글 가짜뉴스 데이터에 대한 메타데이터 제안 (정의)
 
+* 한국에서의 가짜뉴스 데이터셋은 아직 정의된 부분이 없습니다. 가짜뉴스 데이터셋으로 알려져 있는 공인사이트의 메타데이터를 정리 한 결과 
+사실 유무를 판단하는 라벨과 가짜뉴스의 제목, 가짜뉴스의 본문, 가짜뉴스의 종류가 모두다 포함 되어 있어 한글 가짜뉴스 데이터에 대한 메타데이터를
+4가지의 메타데이터로 제안 드립니다.
 
